PRINTING IN HTML

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Esercizio Fizz&Buzz</title>
 </head>
 <body>
+    <h1>Test printing</h1>
+    <ul id="lista"></ul>
     <script src="js/main.js"></script>
 </body>
 </html>
